<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/result_text_view_hint"
        android:gravity="end"
        android:textSize="24sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">
            <Button
                android:id="@+id/d1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_1_name"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/d2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_2_name"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/d3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_3_name"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sum_name"

                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">
            <Button
                android:id="@+id/d4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_4_name"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/d5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_5_name"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/d6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_6_name"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sub_name"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">
            <Button
                android:id="@+id/d7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_7_name"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/d8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_8_name"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/d9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_9_name"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/mul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_mul_name"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">
            <Button
                android:id="@+id/d0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_0_name"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_dot_name"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_clear_name"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_div_name"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            >
            <Button
                android:id="@+id/open_bracket"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/btn_open_bracket_name"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/close_bracket"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/btn_close_bracket_name"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/eqv"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/btn_calc_name"
                android:layout_weight="2"
                />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>